// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscriptions selectors should select manifest-modal-opened 1`] = `false`;

exports[`Subscriptions selectors should select subscriptions tasks 1`] = `
Array [
  "task1",
  "task2",
]
`;

exports[`Subscriptions selectors should select the subscriptions state 1`] = `
Object {
  "manifestModalOpened": false,
  "tasks": Array [
    "task1",
    "task2",
  ],
}
`;
